--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html> 
 <html>
-	<head>
+	<head> 
 		<meta charset="UTF-8">
 		<h1> Бойцы из Бравл Старс </h1>
-	</head>
 	<body>
+		<p id="odin">
 		<h2> №1 Эдгар  <b> 11 сила </b> </h2> 
 		<h3> Эдгара бесит, что его никто не понимает, особенно мама, которая уверена что это просто переходный возраст. Разве она не видит, что в его душе царит вечная тьма?! </h3>
 		<ul>
@@ -13,7 +13,10 @@
 			<li>Звёздная сила: КУЛАЧНЫЙ БОЙ </li>
 			<li> <b> Гиперзаряд: <em> ВЗРЫВНАЯ РЕАКЦИЯ </em> </b> </li>
 		</ul>
+		<button id="edgar"> slish nazhmi </button>
+		<input id="epole">
 		<hr>
+		<p id="dva">
 		<h2> №2 Биби  <b> 11 сила </b> </h2> 
 		<h3> Биби выглядит как хулиганка и ходит с битой на перевес. Вообще-то она любит читать, но никогда не признается в этом, чтобы не испортить себе репутацию </h3>
 		<ul>
@@ -22,7 +25,10 @@
 			<li>Звёздная сила: ХОУМ-РАН </li>
 			<li> <b> Гиперзаряд: <em> ВРАССЫПНУЮ </em> </b> </li>
 		</ul>
+		<button id="bibi"> slish nazhmi </button>
+		<input id="bpole">
 		<hr>
+		<p id="tri">
 		<h2> №3 Динамайк  <b> 11 сила </b> </h2> 
 		<h3> Динамайк - старый шахтёр и золотоискатель, который обожает всё взрывать. Ничто не радует его так, как запах дыма и грохот камней! </h3>
 		<ul>
@@ -31,6 +37,8 @@
 			<li>Звёздная сила: ДИНАПРЫЖОК </li>
 			<li> <b> Гиперзаряд: <em>БУМЕР </em> </b> </li>
 		</ul>
+		<button id="dynamite"> slish nazhmi </button>
+		<input id="dpole">
 		<hr>
 		<table>
 			<tr><th>мегакринж таблица без css </th></tr>
@@ -41,8 +49,9 @@
 			<tr><td> 4. Dr.Pepper Cream Soda (USA) </td><td>Близок по вкусу к ванильному, но чутка проигрывает 9/10</td></tr>
 			<tr><td> 5. Dr.Pepper (Polska) </td><td>Супер кринжуха, но встречается чаще всего и дешевле всех 6/10</td></tr>
 		</table>
-		<input type="button" value="Ваш email для рассылок:" /> 
-		<input>
+		<button id="pepper"> slish nazhmi </button> 
+		<input id="pole">
+		<p id="chetire">
 		<p>Сразу, как только мы заселились, я не успел разложить вещи, как в мою голову ворвался такой поток информации, что ни в сказке сказать, ни топором не вырубить. </p>
 			<p>Во-первых, на судне абсолютно все бумаги - мануалы, журналы, и так далее - все на английском языке. Даже блокнотик, в который записываются отчеты по грузовым операциям - и тот на английском. Бумаги... ооооо... Их тысячи, лежат в сотнях папок, плюс огромное количество документов на компьютерах.</p>
 			<p>Это мне просто разорвало мозг в клочья, потому что с этим объемом информации надо ознакомиться и научиться работать в кротчайшие сроки. Постоянная беготня, постоянная суета, совсем не легко. А также надо как можно быстрее разобраться со всем оборудованием на мостике, а там его мама не горюй. </p>
