--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html> 
 <html>
+	<head>
+		<script  defer src="file_your.js"></script>
+	</head>
 	<head> 
 		<meta charset="UTF-8">
 		<h1> Бойцы из Бравл Старс </h1>
